--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,7 @@ dependencies {
     compile 'com.android.support:support-v4:27.1.1'
     compile 'com.android.support:recyclerview-v7:27.1.1'
     compile 'com.android.support:cardview-v7:27.1.1'
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    compile 'org.litepal.android:core:1.5.1'
+    compile 'com.github.bumptech.glide:glide:4.7.1'
 }
